samples/_failures_safe/1761722751_bfab86_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_968fde75.c: In function ‘main’:
./samples/SAFE/__tmp_968fde75.c:157:13: error: expected expression at end of input
  157 |             return
      |             ^~~~~~
./samples/SAFE/__tmp_968fde75.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_968fde75.c:157:13: error: expected declaration or statement at end of input
